# filesystem-mcp-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DIAGRAMS.md  Plan.md  README.md  TODO.md  bld.cmd  linux_reqs.sh  plan1.md  plan3.md  plan4.md  task.md  task2.md  todo.md
src/: archive.rs  binary.rs  bulk_edit.rs  compare.rs  diff.rs  duplicates.rs  edit.rs  fs_ops.rs  grep.rs  hash.rs  json_reader.rs  line_edit.rs  main.rs  media.rs  mime.rs  murmur3.rs  path.rs  pdf_reader.rs  process.rs  roots.rs  search.rs  spooky.rs  watch.rs
src/core/: allowed.rs  format.rs  mod.rs  path.rs  serde.rs
src/tools/: binary.rs  bulk_edit.rs  compare.rs  docx.rs  duplicates.rs  edit.rs  fs_ops.rs  grep.rs  hash.rs  http_tools.rs  json_reader.rs  line_edit.rs  media.rs  mod.rs  process.rs  s3_tools.rs  screenshot.rs  search.rs  stats.rs  watch.rs  xlsx.rs
src/tools/llm/: config.rs  error.rs  mod.rs  model.rs  model_mapping.rs  transform.rs
src/tools/llm/providers/: cerebras.rs  gemini.rs  mod.rs  openai.rs
src/tools/memory/: graph.rs  manager.rs  mod.rs  storage.rs
src/tools/thinking/: mod.rs
src/tools/wave2/: file.rs  mod.rs  net.rs  proc.rs  sys.rs  util.rs
tests/: http_transport.rs  integration.rs
