[package]
name = "filesystem-mcp-rs"
version = "0.1.7"
edition = "2024"
description = "Rust port of the official MCP filesystem server - fast, safe, protocol-compatible file operations."
license = "MIT"
repository = "https://github.com/ssoj13/memory-mcp-rs"
homepage = "https://github.com/ssoj13/memory-mcp-rs"
keywords = ["mcp", "filesystem", "server", "protocol", "llm"]
categories = ["command-line-utilities", "filesystem"]
readme = "README.md"

[[bin]]
name = "filesystem-mcp-rs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
clap = { version = "4.5.53", features = ["derive"] }
globset = "0.4.18"
rmcp = { version = "0.10.0", features = ["transport-io", "server", "macros", "transport-streamable-http-server"] }
axum = "0.8"
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
similar = "2.7.0"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
url = "2.5.7"
async-recursion = "1.1.1"
humantime = "2.3.0"
futures = "0.3.31"
schemars = { version = "1.1.0", features = ["derive"] }
regex = "1.12.2"
chardetng = "0.1.17"
encoding_rs = "0.8"

[dev-dependencies]
tempfile = "3.23.0"
uuid = { version = "1.19.0", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
