[package]
name = "filesystem-mcp-rs"
version = "0.1.9"
edition = "2024"
description = "Rust port of the official MCP filesystem server - fast, safe, protocol-compatible file operations."
license = "MIT"
repository = "https://github.com/ssoj13/memory-mcp-rs"
homepage = "https://github.com/ssoj13/memory-mcp-rs"
keywords = ["mcp", "filesystem", "server", "protocol", "llm"]
categories = ["command-line-utilities", "filesystem"]
readme = "README.md"

[[bin]]
name = "filesystem-mcp-rs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
clap = { version = "4.5.54", features = ["derive"] }
globset = "0.4.18"
rmcp = { version = "0.12.0", features = ["transport-io", "server", "macros", "transport-streamable-http-server"] }
axum = "0.8"
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
similar = "2.7.0"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
url = "2.5.8"
async-recursion = "1.1.1"
humantime = "2.3.0"
futures = "0.3.31"
schemars = { version = "1.2.0", features = ["derive"] }
regex = "1.12.2"
chardetng = "0.1.17"
encoding_rs = "0.8"

# Hashing
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh64"] }

# PDF
pdf-extract = "0.8"

# JSON query
serde_json_path = "0.7"

# Archives
zip = "2.2"
tar = "0.4"
flate2 = "1.1"

# File watching
notify = "8.0"

# Process management
sysinfo = "0.32"

[dev-dependencies]
tempfile = "3.24.0"
uuid = { version = "1.19.0", features = ["v4"] }
reqwest = { version = "0.13", features = ["json"] }
